# music_modeling_capstone

./: .gitignore  Mel Spectogram.ipynb  README.md  Song analysis.ipynb  configuration.py  data_combiner_design.ipynb  feature_extraction.ipynb  fma_example_notebook.ipynb  fma_small_gtzan_audio_features_extraction.ipynb  gtzan_example_notebook.ipynb  hello.py  pyproject.toml  test_notebook.ipynb
fma_modules/: utils.py
notebooks/00_featured_notebooks/: 00_create_modeling_data.ipynb  01_exploratory_label_and_feature_analysis.ipynb  03_deep_learning_model_training.ipynb  04_deep_learning_model_evaluation.ipynb  05_pca_kmeans_clustering.ipynb  06_audio_player_demo.ipynb  07_audio_player_demo.ipynb  deep_learning_model_evaluation.ipynb  deep_learning_model_training.ipynb  pca_kmeans_clustering.ipynb
notebooks/data_creation/: create_modeling_data.ipynb
notebooks/exploratory/: Attempts_at_Classification.ipynb  CNN_LSTM_MFCC_Classification.ipynb  Model_Experimentation.ipynb  audio_explorer_design.ipynb  cnn_exploration.ipynb  cnn_exploration_log_melspectrogram_v6_data.ipynb  (+20 more)
saved_models/: v6b_mfcc_scaled_128_22500_500_cnn_2d_128_batch_50_epoch_lr_0001.keras  v6c_mfcc_scaled_128_22500_500_cnn_2d_128_batch_200_epoch_lr_0001.keras  v6c_mfcc_scaled_resampled_128_22500_500_cnn_2d_128_batch_200_epoch_lr_0001.keras  v6c_mfcc_scaled_resampled_128_22500_500_cnn_2d_128_batch_200_epoch_lr_0001_002.keras  v6c_mfcc_scaled_segmentresampled53_128_22500_1000_cnn_2d_128_batch_200_epoch_lr_0001.keras  v6c_mfcc_scaled_segmentresampled625_128_22500_100_cnn_2d_128_batch_200_epoch_lr_0001.keras
(+1 files in other folders)
