[project]
name = "music-modeling-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
