[project]
name = "music-modeling-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altair>=5.4.1",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.2",
    "missingno>=0.5.2",
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
    "seaborn>=0.13.2",
    "vegafusion-python-embed>=1.6.9",
    "vegafusion>=1.6.9",
    "vl-convert-python>=1.7.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
