[project]
name = "music-modeling-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altair>=5.4.1",
    "imblearn>=0.0",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.2",
    "missingno>=0.5.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
    "pygame>=2.6.1",
    "seaborn>=0.13.2",
    "tensorflow==2.15.0",
    "tqdm>=4.67.0",
    "vegafusion-python-embed>=1.6.9",
    "vegafusion>=1.6.9",
    "vl-convert-python>=1.7.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
